# crow

./: .gitmodules  CMakeLists.txt  README.md  conanbuildinfo.cmake
include/: crow.hpp  simplepb.hpp
include/crow/: crow_decode.hpp  crow_encode.hpp  crow_test_decoder.hpp
include/crow/private/: crow_decode_impl.hpp  crow_encode_impl.hpp  protobuf_wire_format.h  stack.hpp
include/crow_private/: crow_decode_impl.hpp  crow_encode_impl.hpp
src/: crow.cpp  crow_decode.cpp  crow_encode.cpp  protobuf_wire_format.h  simplepb.cpp  stack.hpp
tests/: decode_struct_tests.cpp  decode_tests.cpp  encode_struct_tests.cpp  encode_tests.cpp  set_test.cpp  test_defs.hpp
